fixed projects/hannahcodes.html and projects/hannahplays.html where the new ui didn't display correctly on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1026,16 +1026,20 @@ nav {
 .projects_hc_section {
   background-color: var(--light-section-1-bg-colour);
   padding-bottom: 1em;
+  @media screen and (max-width: 800px) {
+   margin-top: 0;
+  }
   @media (prefers-color-scheme: dark) {
     background-color: var(--section-1-bg-colour);
   }
-  .projects_hc_h1 {
-    padding-left: 9em;
-    padding-bottom: 0.7em;
-    color: var(--light-nav-text-colour);
+  .project_hc_h1 {
+    margin: auto;
+      text-align: center;
+      padding-bottom: 1em;
+      color: var(--light-nav-text-colour);
     @media screen and (max-width: 800px) {
       margin: auto;
-      padding-left: 1.5em;
+      padding-top: 2em;
       align-items: center;
     }
     @media (prefers-color-scheme: dark) {
@@ -1213,7 +1217,9 @@ nav {
   padding-bottom: .5em;
   /*padding:10px;*/
   background-color: var(--light-section-3-bg-colour);
-
+@media screen and (max-width: 800px) {
+  padding-bottom: 17em;
+}
   @media (prefers-color-scheme: dark) {
     background-color: var(--section-3-bg-colour);
   }
@@ -1295,6 +1301,7 @@ nav {
 }
 .project-header-section-text {
   margin: auto;
+  padding-bottom: 1em;
   font-size: 25px;
   color: var(--light-nav-text-colour);
 
@@ -1370,16 +1377,6 @@ nav {
   padding-top: 10em;
   padding-bottom: 5em;
   color: var(--light-nav-text-colour);
-  @media (prefers-color-scheme: dark) {
-    color: var(--nav-text-colour);
-  }
-}
-.project_hc_h1 {
-  margin: auto;
-  text-align: center;
-  padding-bottom: 1em;
-  color: var(--light-nav-text-colour);
-
   @media (prefers-color-scheme: dark) {
     color: var(--nav-text-colour);
   }
